# knowledge-assistant

./: .dockerignore  .env.example  .env.prod.example  .gitignore  README.md  biome.json  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .dockerignore  Cargo.toml  Dockerfile
apps/api/.sqlx/: query-1549c6810b132b6b470563252280d4079b93d728f062b39219da10e05468c39c.json  query-167481bb1692cc81531d9a5cd85425e43d09a6df97c335ac347f7cfd61acd171.json  query-34348ed9fd114529697e85dd9db613aca1a86689738a26eeb5b0fd3a0cc26d84.json  query-3d77df8fa55b2f4a39bca75fac891b36007dfb06288fd6edde329a3bf92b7773.json  query-4632d3e3614b1e31541b7317e6dff2d381dba7b8886938713d085d14bfdc1727.json  query-552b98b78ba092bc1446e81fe7340fb0855424c4c75b83cd1f264b24806a6c7f.json  query-5b20ee5f95c7fb200c2ecddd0bf89595a7edce0bd8dc813f47134fc8a97a3a4c.json  query-6982d6220e70490f967c04a24aeaf04fa52a1a8a097dbe1353638ea1bcdf2e5e.json  query-75c66de0c39df0f69064a235d98d43495a159599e98bf8fa5bc2328b22aee7dd.json  query-8ddfa1888aec0089e9bc0c0ce3b406a9455120c2d392925b8c18694e9f7e0a2f.json  query-af8e0e193ca05007833a7024288cfbbe936a450d702abf9af9c3723f743365dc.json  query-bd9e5e61be8665364d326ee694ee31029d53ff7226249c32e6663a36b2968ef3.json  query-bfe74df5896556b977b5e45cb812877abf7f7c6706c411078b038fab5a3f7396.json  query-c1ae18cccd3a91c075cd9a5f4114b59f5fc7f515937a8db8cafa043746eb7de7.json  query-d2ee5e7ac0543c6707aecfc4d538eb687f6c51f4993f5bfa6481f72d504081cb.json  query-e86541046187c0c6779f9614a33239b72c53062e95706d11dea41ce241046fdf.json  query-eb6895fd50ba84c3bdcc51fe94d092752e0b0b9f59d356c8f3d2bdb1048b6c81.json  query-ecb1f5f231b4dd23c18a10d5256e2dc6bf83ca30edd6826ef06bc63c866eec31.json
apps/api/migrations/: 20260227122256_create_users.sql  20260227122303_create_sessions.sql  20260228120000_create_note_files.sql  20260305120000_create_health_tables.sql  20260310120000_create_workout_tables.sql  20260319120000_create_knowledge_tables.sql  20260328120000_create_analysis_cache.sql  20260328130000_create_chat_tables.sql  20260328140000_add_workout_examples_cache.sql  20260329120000_create_training_goals.sql  20260330120000_create_workout_plans.sql  20260402120000_create_archive_workout_tables.sql  (+4 more)
(+195 files in other folders)
