[package]
name = "knowledge-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
jsonwebtoken = "9"
argon2 = "0.5"
aes-gcm = "0.10"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
tower_governor = "0.4"
sqlite-vec = "0.1"
libsqlite3-sys = "0.30"

[dev-dependencies]
axum-test = "15"
wiremock = "0.6"

[lints.rust]
unsafe_code = "deny"
missing_docs = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "allow"
panic = "warn"
# False-positive pedantic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Doc lints — not useful for a personal project
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
